--- a/final_project_carine_hajjar.Rmd
+++ b/final_project_carine_hajjar.Rmd
@@ -29,7 +29,7 @@ mturk <- read.csv("Trump_Obama.csv")
 
 \newpage
 # Abstract
-Barber and Pope (2018) show that the electorate is more influenced by party position than real ideology. The results of the paper and the replication indicate that party loyalists vote in line with their leader, regarless of the political content of their leader's cues. More specifically, voters with low political knowledge, high partisanship, and high approval of their leader are more likely to support their leader's cues, regardless of the true ideological implications, even if they are not in line with the party's traditional views. I looked at Barber and Pope's regressions testing the causal effect of conservative and liberal cues from President Trump on Republican, Democrats, and Independents with varying levels of political knowledge, partisanship, approval of Trump, and political ideology. I took the regression on partisanship and knowledge as well as the overall regression of average cue response among all political identities and ran a more robust binomial regression as well as corrected for a mistake in the first figure of the paper. I found that party loyalists are not necessarily ideological loyalists and, more specifically, that many Republican Trump supporters respond positively to liberal or conservative cues from Trump but not necessarily from others. This finding forces Americans to rethink the importance of parties and the ideological strength of their positions. 
+Barber and Pope (2018) show that the electorate is more influenced by party position than real ideology. I successfully replicated Barber and Poper's results. The results of the paper and the replication indicate that party loyalists vote in line with their leader, regarless of the political content of their leader's cues. More specifically, voters with low political knowledge, high partisanship, and high approval of their leader are more likely to support their leader's cues, regardless of the true ideological implications, even if they are not in line with the party's traditional views. I looked at Barber and Pope's regressions testing the causal effect of conservative and liberal cues from President Trump on Republican, Democrats, and Independents with varying levels of political knowledge, partisanship, approval of Trump, and political ideology. I took the regression on partisanship and knowledge as well as the overall regression of average cue response among all political identities and ran a more robust binomial regression as well as corrected for a mistake in the first figure of the paper. I found that party loyalists are not necessarily ideological loyalists and, more specifically, that many Republican Trump supporters respond positively to liberal or conservative cues from Trump but not necessarily from others. This finding forces Americans to rethink the importance of parties and the ideological strength of their positions. 
 \newpage
 
 # Introduction
@@ -55,7 +55,7 @@ Iyengar and Westwood (2015) mark the rise of party identity in American life, ma
 # Paper Review 
 The authors offer four hypothesese under the broader hypothesis that partisanship and policy preference are highly intertwined. That is, partisan loyalty dictates ones policy preferences. So, for instance, a strong Republican will support liberal or conservative policies if endorsed by President Trump. It is worth noting that the authors recognize the fact that the Trump influence they see on Republicans cannot be differentiated from the "presidency effect." Overall, however, the data shows that partisanship is on average stronger than policy ideals. 
 <br>
-```{r, fig.height = 4, fig.width= 5, fig.align= "center", cache = TRUE}
+```{r, fig.height = 4, fig.width= 5, fig.align= "center", cache = TRUE, fig.cap = "Each point represents the effect on the policy cue on a political group. The effect is the coefficient extracted from a linear regression that uses conservative of liberal Trump cues (or GOP congressional cues) with a racial control to predict support for a policy. For instance, the first point is the coefficient for the liberal Trump cue when the data was filtered for just Republicans. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The black bars represent the 95 percent confidence interval for each predicted treatment effect. The most significant effects are seen among Republicans when given conservative and liberal Trump cues. I corrected for the mistake on the Republican point under Republican in Congress treatment. In the original figure, it was listed as a 0.03 conservative shift. The true effect, however, was 0.008, a very slight liberal shift indicative of little to no effect from a GOP cue on Republicans. Below is a screenshot of the original figure in the paper for comparison."}
 # We are looking to see the effect of different cues (liberal, conservative, and conservative from congress) on Republicans, Democrats, and Independents. 
 # Regression for average treatment effects of a conservative, liberal, and congression conservative cue among Republicans:
 # With each of the regressions, we see data filtered for Republicans:
@@ -138,7 +138,7 @@ To reiterate, here are the four hypotheses:
 
 The authors confirm the first three, finding that those with lower political knowledge, higher partisanship (Republican), and higher approval of the President respond to his cues, both liberal and conservative. 
 <br>
-```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE}
+```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE, fig.cap= "This figure looks at the effect of Trump cues on Republicans at different levels of self-reported political knowledge. The left panel represents a conservative cue and the right represents a liberal cue. The effect of the cue is the coefficient extracted from a linear regression that uses conservative (or liberal) Trump cues, political knowledge, and a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95 percent confidence interval for each predicted treatment effect. The figure shows that Republicans with lower political knowledge are most likely to support a Trump cue, whether conservative or liberal."}
 # This code will culminate in plot that looks at the treatment effect (political cue) on those with varying political knowledge. # The hypothesis here states: Only the those with less knowledge should react to the cue and behave as party loyalists presumably because the knowledgeable gain little from the treatment (political cue).
 # Model 1 is a linear regression that looks that the impact of political knowledge on response to cues. The authors include an interaction between liberal cues and knowledge as well as conservative cues and knowledge to see if there is any discrepancy between cues' effects with knowledge:
 model1 <- lm(Support ~ race_white + libtrump*knowledge + contrump*knowledge, data = data[(data$contrump == 1 | data$self == 1 | data$libtrump == 1),])
@@ -203,7 +203,7 @@ axis(2, at = seq(-.25, .15, .05), las = 2)
 box()
 ```
 
-```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE}
+```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE, fig.cap= "This figure looks at the effect of Trump cues on Republicans at different levels of self-reported partisanship. The left panel represents a conservative cue and the right represents a liberal cue. The effect of the cue is the coefficient extracted from a linear regression that uses conservative (or liberal) Trump cues, partisanship, a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95 percent confidence interval for each predicted treatment effect. The figure shows that Republicans with stronger partisanship are most likely to support a Trump cue, whether conservative or liberal."}
 # This code will culminate in plot that looks at the treatment effect (political cue) on those with varying partisan affiliation. 
 # The hypothesis here states: Strong party affiliates that share party with the cue-giver are more likely to be party loyalists.
 # This model is the basis of the predictions and will help determine the causal effect of political cues on different levels of partisanship among Republicans. This model estimates support of policy based on race and the interaction between cues (conservative and liberal) and political ideology:
@@ -261,7 +261,7 @@ box()
 # ADD ON BY LOOKING AT PARTY AFFILIATION EFFECT ON DEMOCRATS
 ```
 
-```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE}
+```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE, fig.cap= "This figure looks at the effect of Trump cues on Republicans at different levels of self-reported approval of the President. The left panel represents a conservative cue and the right represents a liberal cue. The effect of the cue is the coefficient extracted from a linear regression that uses conservative (or liberal) Trump cues, approval rating, and a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95 percent confidence interval for each predicted treatment effect. The figure shows that Republicans with stronger approval of Trump are most likely to support a Trump cue, whether conservative or liberal."}
 # This code will culminate in plot that looks at the treatment effect (political cue) on those with varying approval levels of Trump. 
 # The hypothesis here states: Those who approve of the cue-giver should be more likely to be party loyalists. 
 # This model is the basis of the predictions and will help determine the causal effect of political cues on different levels of approval of Trump. This model estimates support of policy based on race and the interaction between cues (conservative and liberal) and approval:
@@ -317,7 +317,7 @@ box()
 <br>
 The fourth, hypothesis, however, turns out to be wrong. The authors find that self-described conservatives with stronger ideological identifications are actually more prone to response to support conservative and liberal policies from President Trump. This means that idelogy has become less moral and philosophical, but more social. 
 <br>
-```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE}
+```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE, fig.cap= "This figure looks at the effect of Trump cues on Republicans at different levels of self-reported idelogical strength. The left panel represents a conservative cue and the right represents a liberal cue. The effect of the cue is the coefficient extracted from a linear regression that uses conservative (or liberal) Trump cues, idelogical strength, and a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95 percent confidence interval for each predicted treatment effect. The figure shows that Republicans with stronger self-reported ideology are most likely to support a Trump cue, whether conservative or liberal. This means that ideology is becoming more indicative of partisanship than true views. It has, perhaps, become less moral and philosophical, but more social. "}
 # This code will culminate in plot that looks at the treatment effect (political cue) on those with varying ideologies. 
 # The hypothesis here states: Self-described conservatives should hold firm to their presumed beliefs and are less likely to be party loyalists because they stick with their self-described policy tenets.
 # The steps here are the same as those above, just using ideology. I will not go through each in detail.
@@ -367,7 +367,6 @@ axis(2, at = seq(-.25, .25, .05), las = 2)
 box()
 ```
 <br>
-
 
 # Replication
 I was able to replicate the Interactions Models table (Table 1) and Figures 1-5 which test each of the hypotheses in the paper. The only issue I ran into was in Figure 1: Average Treatment Effect of Policy Cues. This table claims that cues from GOP leaders on Republicans make Republicans about 3% less likely to vote liberal. This is not consistent with the outcome of the authors' regression which shows that Republicans were slightly more likely to vote liberally. I presented this mistake to the authors and they verified my findings.
@@ -530,14 +529,16 @@ box()
 ![Figure 3, Barber and Pope](./pictures/fig3.png)
 
 
-In order to see if the relationship between political cues and partisanship is only exclusive to Republicans, I would like to run a similar model on partisanship levels among Democrats. This would mean repeating the steps done in Figure 3, but testing the cue's effects on partisanship levels from 1-4 (very Democrat to Independent). I predict that there will be a different effect given the fact that Democrats would be answering cues from Trump. Therefore, I expect there to be some sort of aversionary effect: even if Trump advocates a liberal policy, they will support it less than their Republican counterpoints at the same level of partisanship just because the cue is from the a Republican leader (especially one as polarizing as Trump). 
+In order to see if the relationship between Trump cues and partisanship is only exclusive to Republicans, I would like to run a similar model using partisanship levels among Democrats. This would mean repeating the steps done in Figure 3, but testing the cue's effects on partisanship levels from 1-4 (very Democrat to Independent). I predict that there will be a different effect given the fact that Democrats would be answering cues from Trump. Therefore, I expect there to be some sort of aversionary effect: even if Trump advocates a liberal policy, they will support it less than their Republican counterpoints at the same level of partisanship just because the cue is from the a Republican leader (especially one as polarizing as Trump). 
 
 The results show that Democrats of different partisan levels (Independent to strong Democrat) do not respond significantly to conservative or liberal Trump cues. There is an interesting trend among different levels of Democrats when given a conservative cue: as partisanship becomes more Democrat, Democrats are more and more likely to vote liberally when given a conservative cue. It is important to note, however, that uncertainty is greatest at the strongest lebel of Democrat. Liberal cues, however, have almost no effect on different levels of partisanship to the left. 
 
 ## Extension 3: Binomial Regression instead of Linear on Figure 3
-Finally, I want to take figure 2 and see if I can create a more robust model. These regression models are currently linear and use interactions to predict the outcome of a cue given something like partisanship, ideology, etc. The authors then use the predict function to predict support of a policy and to find the causal effect of recieving a cue by subtracting the response outcome for the treated from a fake data set of untreated individuals. I believe that by using a binomial regression and the posterior_linpred function, I could create a more robust model and prediction, thus achieving a more accurate causal effect. (I would compare these two models with LOO as well as using standard errors and sigma.)
+Finally, I want to take Figure 2 and see if I can create a more robust model. These regression models are currently linear and use interactions to predict the outcome of a cue given something like partisanship, ideology, etc. The authors then use the predict function to predict support of a policy and to find the causal effect of recieving a cue by subtracting the response outcome for the treated from a fake data set of untreated individuals. I believe that by using a binomial regression and the posterior_linpred function, I could create a more robust model and prediction, thus achieving a more accurate causal effect. 
 
-The only downside of this method is the fact that posterior_linpred does not give an uncertainty measure for each of its estimates while predict yields standard error. That is the reason there are no uncertainty measures on the graph. 
+Whereas the authors perform an OLS regression - a Frequentist appraoch - I use an Bayesian approach. The Frequentist approach can be useful as it looks just at the data given to illustrate trends and draw conclusions. The Bayesian appraoch, however seems to be more robust as it uses prior information when making inferences, meaning that it does not merely summarize, but models future outcomes as well. Moreover, in a Bayesian approach, all inferences are "probabalistic and can be represented by random simulations" which is beneficial when summarizing uncertainty or using "regression models for predictions."@RAOS
+
+In Figure 2, Barber and Pope use the predict function to model different treatment outcomes (response to cue) given different levels of political knowledge among Republicans. Since I am using a Bayesian appraoch as well as a binomial regression, I use posterior_linpred which, according to Gelman et al. "returns a cector of posterior simulations whose mean will equal the point prediction obtained...and whose standard deviation represents uncertainty in the fitted model."@RAOS I believe that this, coupled with the binomial regression, is a far more robust prediction method. Moreover, the authors are using a linear regression to predict a binary variable of support (survey respondents answer yes or no). Therefore, I chose to use a binomial regression instead as it is a more robust fit for the modeling of a binary dependent variable.
 ```{r, fig.height = 4, fig.width= 6.5, fig.align= "center", cache = TRUE}
 # FIGURE 2 EXTENSION
 
