--- a/bib.bib
+++ b/bib.bib
@@ -14,7 +14,7 @@
 }
 @Book{RAOS,
   title = {Regression and Other Stories},
-  author = {Andrew Gelma, Jennifer Hill, Aki Vehtai},
+  author = {Andrew Gelman, Jennifer Hill, Aki Vehtai},
   year = {2019},
 }
 @Manual{paper2,
