--- a/scratch work.Rmd
+++ b/scratch work.Rmd
@@ -132,11 +132,19 @@ Next, I plan to expand on the findings in Figure 3: Average Treatment Effect by 
 
 
 CAPTIONS
-1
+1 FIG 1 
 , fig.cap= "Each point represents the effect on the policy cue on a political group. The effect is the coefficient extracted from a linear regression that uses conservative of liberal Trump cues (or GOP congressional cues) with a racial control to predict support for a policy. For instance, the first point is the coefficient for the liberal Trump cue when the data was filtered for just Republicans. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The black bars represent the 95% confidence interval for each predicted treatment effect. The most significant effects are seen among Republicans when given conservative and liberal Trump cues. I corrected for the mistake on the Republican point under "Republican in Congress" treatment. In the original figure, it was listed as a 0.03 conservative shift. The true effect, however, was 0.008 - a very slight liberal shift indicative of little to no effect from a GOP cue on Republicans. Below is a screenshot of the original figure in the paper for comparison."
 
-2
-, fig.cap= "The points in the left pannel represent the effect of a liberal Trump policy cue on varying levels of Democratic partisanship. The effect is the coefficient extracted from a linear regression that uses liberal Trump cues with a racial control to predict support for a policy. The points in the right pannel represent the effect of a conservative Trump policy cue on varying levels of Democratic partisanship. The effect is the coefficient extracted from a linear regression that uses conservative Trump cues with a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95% confidence interval for each predicted treatment effect. Unlike the original figure, I use Democratic partisanship on the horizontal axis rather than Republican partisanship. That is, I am testing the effect of a Trump cue on different levels of Democrats. Below is a screenshot of the original figure in the paper for comparison."
+2 KNOWLEDGE REP
+fig.cap= "The points in the left pannel represent the effect of a Trump policy cue on varying levels of self-reported political knowledge among Republicans. The right panel looks at the effect of a conservative cue and the left looks at the effect of a liberal cue. The effect is the coefficient extracted from a linear regression that uses conservative Trump cues with a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing political knowledge. The black bars represent the 95 percent confidence interval for each predicted treatment effect. This figure indicates that Republicans with more self-reported political knowledge are less likely to be swayed by a Trump cue and are especially unlikely to support a liberal statement from the President."
+
+PARTISAN
+
+fig.cap= "This figure looks at the effect of Trump cues on Republicans at different levels of self-reported partisanship. The left panel represents a conservative cue and the right represents a liberal cue. The effect of the cue is the coefficient extracted from a linear regression that uses conservative (or liberal) Trump cues with a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95 percent confidence interval for each predicted treatment effect. The figure shows that Republicans with stronger partisanship are most likely to support a Trump cue, whether conservative or liberal."
+
+
+2 PARTISAN EXPANSION
+, fig.cap= "The points in the left pannel represent the effect of a liberal Trump policy cue on varying levels of Democratic partisanship. The points in the right pannel represent the effect of a conservative Trump policy cue on varying levels of Democratic partisanship. The effect is the coefficient extracted from a linear regression that uses liberal (or conservative) Trump cues with a racial control to predict support for a policy. The vertical axis represents the increased probability of voting for a liberal policy. Positive values indicate a liberal shift while negative values indicate a conservative shift. The horizontal axis represents increasing partisanship. The black bars represent the 95 percent confidence interval for each predicted treatment effect. Unlike the original figure, I use Democratic partisanship on the horizontal axis rather than Republican partisanship. That is, I am testing the effect of a Trump cue on different levels of Democrats. Below is a screenshot of the original figure in the paper for comparison."
 
 
 3
