--- a/bib.bib
+++ b/bib.bib
@@ -55,3 +55,20 @@
     year = {2014},
     url = {https://www.dartmouth.edu/~seanjwestwood/papers/partisanAffectAPSA.pdf},
   }
+  @Manual{Bafumi,
+    title = {A New Partisan Voter},
+    author = {Joseph Bafumi, Robert Y. Shapiro},
+    organization = {The Journal of Politics},
+    address = {University of Chicago},
+    year = {2009},
+    url = {https://www-journals-uchicago-edu.ezp-prod1.hul.harvard.edu/doi/pdfplus/10.1017%2FS0022381608090014},
+  }
+  @Manual{Carmines,
+    title = {Ethos, Ideology, and Partisanship: Exploring the Paradox of Conservative Democrats},
+    author = {JEdward G. Carmines, Michael Berkman},
+    organization = {Political Behavior},
+    address = {University of Chicago},
+    year = {2009},
+    url = {https://www-journals-uchicago-edu.ezp-prod1.hul.harvard.edu/doi/pdfplus/10.1017%2FS0022381608090014}
+  }
+  
