--- a/bib.bib
+++ b/bib.bib
@@ -12,7 +12,7 @@
   note = {American Political Science Review},
   url = {https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/38BFML},
   }
-@Book{RAOS,
+@Manual{RAOS,
   title = {Regression and Other Stories},
   author = {Andrew Gelman and Jennifer Hill and Aki Vehtai},
   year = {2019},
